cocoa: only allow tabs to take focus when full keyboard access is enabled

Bug: 702719
Change-Id: Id653f89e2076d63f2569312f58c87731a0b1de59
Reviewed-on: https://chromium-review.googlesource.com/716996
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508737}
Former-commit-id: 8d8eb9e25ecaff6fec2ed3aff1bc348751541a91